setting (compile) enable-preview